# iyou_hive

./: .dockerignore  .env.example  .gitignore  .gitmodules  ADVERSARIAL_HANDLING.md  AI_ASSISTANT_ADVERSARIAL_HANDLING.md  CODEBASE_ANALYSIS_REPORT.md  Dockerfile  MESHING_PROTOCOL_INTEGRATION.md  README.md  SENIOR_DEV_REPORT.md  STYLE_GUIDE.md  SYNC_PIPELINE_README.md  TIMELINE_SCHEMA.md  TODO.md  WORKSPACE_DEBUGGING_REPORT.md  compose.yaml  db.sqlite3  docker-entrypoint.sh  final_design_doc.md  main.py  manage.py  pdf_to_md.py  pyproject.toml  relocate.md  relocate.response_sheet.html  relocate.response_sheet.json  reset_and_test.py  sync_legal_docs_ORIGINAL.py  test_add_event.py  test_ai_assistant.py  test_ai_assitant.py  test_ai_js.html  test_hive_roundtrip.py  test_pdf_conversion.py  test_sync_pipeline.py
apps/accounts/: __init__.py  (+5 more)
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
deploy/: django-secrets.yaml
docs/: DEVELOPER_GUIDE.md  DID_AUTH.md  DID_SIGN.md  END_OF_DAY_REPORT.md  EXEC_REPORT.md  EXEC_REPORT2.md  GAP_REPORT.md  HIVER_DEVELOPER_GUIDE.md  HIVE_DEVELOPER_GUIDE.md  KARPATHY_LLM_WIKI.md  LLM_WIKI_ROLLOUT.md  NEW_VISION.md  PORTABILITY_PLUS_CONFLICTRES_ARCHITECTURE_PLANE.md  PROJECT_STATE.md  ROADMAP_2026.md  SWOT.md  TECH_SUMMARY_MAY9.md  TESTING_CHECKLIST.md  TEST_STRATEGY.md  TRANSITION_NOTES.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
hiver_django.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: batch_convert_blank_forms.py  check_models.py  extract_messages.py  filemap.sh  filemapper.py  form_detector.py  form_field_mapping.py  generate_response_sheet.py  legal_utils.py  minify_assets.py  pdf_to_md_conversion.py  state_form_config.py  sync_legal_docs.py  timeline_to_pdf.py
static/: relocate_ORIGINAL_DO_NOT_CHANGE.md
temp/: convert4.py
templates/: base.html  onboarding_first_case.html
(+244 files in other folders)
