[project]
name = "hiver-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=5.2.13",
    "pymupdf>=1.23.5",
    "google-genai>=1.74.0",
    "markdown>=3.10.2",
    "markitdown>=0.1.5",
    "pdfplumber>=0.11.9",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "celery",
    "djangorestframework",
    "django-cors-headers",
    "redis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]
exclude = ["tests*"]
