[project]
name = "hiver-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=5.2.13",
    "django-cors-headers",
    "django-environ>=0.12.0",
    "djangorestframework",
    "gunicorn>=23.0.0",
    "pymupdf>=1.23.5",
    "google-genai>=1.74.0",
    "markdown>=3.10.2",
    "markitdown>=0.1.5",
    "pdfplumber>=0.11.9",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "celery",
    "redis",
    "whitenoise>=6.9.0",
    "mozilla-django-oidc>=5.0.2",
    "lancedb>=0.25,<0.26",
    "sentence-transformers>=2.7,<3",
    "numpy<2",
    "torch>=2.2.0,<2.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]
exclude = ["tests*"]
